# QR-decomposition

./: CMakeLists.txt  Makefile  README.md  matrix.txt  solve.cpp
apps/: main.cpp
include/: qr_decomposition.h
src/: qr_decomposition.cpp
tests/: integration_tests.cpp  unit_tests.cpp
